--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,14 @@
 }
 
 .card {
-  padding: 2em;
+  padding: .1em;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.pokemon-card {
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 }
